--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ google-auth==2.26.0
 PyPDF2==3.0.1
 openai==1.32.0
 rapidfuzz==2.15.1
-google-cloud-storage==3.14.0
+google-cloud-storage>=3.4.1,<4.0.0
 langchain==0.2.13
 faiss-cpu==1.7.4
 numpy==1.26.0
