--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.111.1
 uvicorn==0.27.0
 google-api-python-client==2.93.0
-google-auth==2.26.0
+google-auth>=2.26.1,<3.0.0
 PyPDF2==3.0.1
 openai==1.32.0
 rapidfuzz==2.15.1
