--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.27.0
 google-api-python-client==2.93.0
 google-auth>=2.26.1,<3.0.0
 PyPDF2==3.0.1
-openai==0.27.8
+openai>=1.0.0
 langchain==0.2.0
 rapidfuzz==2.15.1
 google-cloud-storage>=3.4.1,<4.0.0
