--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ google-api-python-client==2.93.0
 google-auth>=2.26.1,<3.0.0
 PyPDF2==3.0.1
 openai>=1.0.0
+psycopg2-binary==2.9.11
+SQLAlchemy==2.0.44
 langchain==0.2.0
 rapidfuzz==2.15.1
 google-cloud-storage>=3.4.1,<4.0.0
