--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ SQLAlchemy==2.0.44
 langchain==0.2.0
 rapidfuzz==2.15.1
 google-cloud-storage>=3.4.1,<4.0.0
+werkzeug==2.3.1
 faiss-cpu==1.12.0
 numpy>=1.26.2,<1.27.0
 langchain-community>=0.1.0
