--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
 fastapi==0.111.1
-uvicorn==0.27.0
-google-api-python-client==2.93.0
-google-auth>=2.26.1,<3.0.0
-PyPDF2==3.0.1
-openai>=1.0.0
-psycopg2-binary==2.9.11
-SQLAlchemy==2.0.44
-langchain==0.2.0
-rapidfuzz==2.15.1
-google-cloud-storage>=3.4.1,<4.0.0
+uvicorn==0.25.0
+pydantic==2.6.0
+sqlalchemy==2.0.22
+psycopg2-binary==2.9.9
+passlib[bcrypt]==1.7.4
 werkzeug==2.3.1
-faiss-cpu==1.12.0
-numpy>=1.26.2,<1.27.0
-langchain-community>=0.1.0
-
+google-api-python-client==2.100.0
+google-auth==2.22.0
+google-cloud-storage==2.18.0
+PyPDF2==3.1.1
+openai==1.32.1
+langchain==0.1.243
+rapidfuzz==2.9.1
+numpy==1.26.0
