--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,11 @@ google-auth==2.26.1
 google-cloud-storage==2.18.0
 PyPDF2==3.0.1
 openai==1.32.1
-langchain==0.1.351
-langchain-community==0.0.354
+langchain==0.3.27
+langchain-core==0.3.79
+langchain-community==0.3.31
+langchain-openai==0.3.35
+langchain-huggingface==0.3.1
+langchain-mistralai==0.2.12
 rapidfuzz==3.14.1
 numpy==1.26.4
