--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.111.1
 uvicorn==0.25.0
-pydantic==2.6.0
+pydantic>=2.7.4,<3.0.0
 sqlalchemy==2.0.22
 psycopg2-binary==2.9.9
 passlib[bcrypt]==1.7.4
