--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ anyio==4.11.0
     #   httpx
     #   openai
     #   starlette
+cachetools==6.2.1
+    # via google-auth
 certifi==2025.10.5
     # via
     #   httpcore
@@ -28,6 +30,40 @@ distro==1.9.0
     # via openai
 fastapi==0.119.0
     # via -r requirements.in
+google-api-core==2.26.0
+    # via
+    #   google-api-python-client
+    #   google-cloud-core
+    #   google-cloud-storage
+google-api-python-client==2.184.0
+    # via -r requirements.in
+google-auth==2.41.1
+    # via
+    #   -r requirements.in
+    #   google-api-core
+    #   google-api-python-client
+    #   google-auth-httplib2
+    #   google-auth-oauthlib
+    #   google-cloud-core
+    #   google-cloud-storage
+google-auth-httplib2==0.2.0
+    # via
+    #   -r requirements.in
+    #   google-api-python-client
+google-auth-oauthlib==1.2.2
+    # via -r requirements.in
+google-cloud-core==2.4.3
+    # via google-cloud-storage
+google-cloud-storage==3.4.1
+    # via -r requirements.in
+google-crc32c==1.7.1
+    # via
+    #   google-cloud-storage
+    #   google-resumable-media
+google-resumable-media==2.7.2
+    # via google-cloud-storage
+googleapis-common-protos==1.70.0
+    # via google-api-core
 greenlet==3.2.4
     # via sqlalchemy
 h11==0.16.0
@@ -36,6 +72,10 @@ h11==0.16.0
     #   uvicorn
 httpcore==1.0.9
     # via httpx
+httplib2==0.31.0
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
 httpx==0.28.1
     # via
     #   langsmith
@@ -63,6 +103,12 @@ langsmith==0.4.37
     # via
     #   langchain
     #   langchain-core
+markupsafe==3.0.3
+    # via werkzeug
+numpy==2.3.4
+    # via -r requirements.in
+oauthlib==3.3.1
+    # via requests-oauthlib
 openai==2.3.0
     # via -r requirements.in
 orjson==3.11.3
@@ -73,6 +119,19 @@ packaging==25.0
     #   langsmith
 passlib==1.7.4
     # via -r requirements.in
+proto-plus==1.26.1
+    # via google-api-core
+protobuf==6.33.0
+    # via
+    #   google-api-core
+    #   googleapis-common-protos
+    #   proto-plus
+pyasn1==0.6.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.2
+    # via google-auth
 pydantic==2.12.2
     # via
     #   fastapi
@@ -82,6 +141,10 @@ pydantic==2.12.2
     #   openai
 pydantic-core==2.41.4
     # via pydantic
+pyparsing==3.2.5
+    # via httplib2
+pypdf2==3.0.1
+    # via -r requirements.in
 python-dotenv==1.1.1
     # via -r requirements.in
 pyyaml==6.0.3
@@ -90,17 +153,26 @@ pyyaml==6.0.3
     #   langchain-core
 requests==2.32.5
     # via
+    #   google-api-core
+    #   google-cloud-storage
     #   langchain
     #   langsmith
+    #   requests-oauthlib
     #   requests-toolbelt
+requests-oauthlib==2.0.0
+    # via google-auth-oauthlib
 requests-toolbelt==1.0.0
     # via langsmith
+rsa==4.9.1
+    # via google-auth
 sniffio==1.3.1
     # via
     #   anyio
     #   openai
 sqlalchemy==2.0.44
-    # via langchain
+    # via
+    #   -r requirements.in
+    #   langchain
 starlette==0.48.0
     # via fastapi
 tenacity==9.1.2
@@ -120,9 +192,13 @@ typing-extensions==4.15.0
     #   typing-inspection
 typing-inspection==0.4.2
     # via pydantic
+uritemplate==4.2.0
+    # via google-api-python-client
 urllib3==2.5.0
     # via requests
 uvicorn==0.37.0
+    # via -r requirements.in
+werkzeug==3.1.3
     # via -r requirements.in
 zstandard==0.25.0
     # via langsmith
