--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,11 @@ anyio==4.11.0
     # via
     #   httpx
     #   openai
+    #   starlette
 attrs==25.4.0
     # via aiohttp
-blinker==1.9.0
-    # via flask
+cachetools==6.2.1
+    # via google-auth
 certifi==2025.10.5
     # via
     #   httpcore
@@ -28,7 +29,7 @@ certifi==2025.10.5
 charset-normalizer==3.4.4
     # via requests
 click==8.3.0
-    # via flask
+    # via uvicorn
 colorama==0.4.6
     # via
     #   click
@@ -37,22 +38,52 @@ dataclasses-json==0.6.7
     # via langchain-community
 distro==1.9.0
     # via openai
-flask==3.1.2
-    # via
-    #   -r requirements.in
-    #   flask-cors
-flask-cors==6.0.1
+fastapi==0.119.0
     # via -r requirements.in
 frozenlist==1.8.0
     # via
     #   aiohttp
     #   aiosignal
+google-api-core==2.26.0
+    # via
+    #   google-api-python-client
+    #   google-cloud-core
+    #   google-cloud-storage
+google-api-python-client==2.184.0
+    # via -r requirements.in
+google-auth==2.41.1
+    # via
+    #   google-api-core
+    #   google-api-python-client
+    #   google-auth-httplib2
+    #   google-cloud-core
+    #   google-cloud-storage
+google-auth-httplib2==0.2.0
+    # via google-api-python-client
+google-cloud-core==2.4.3
+    # via google-cloud-storage
+google-cloud-storage==3.4.1
+    # via -r requirements.in
+google-crc32c==1.7.1
+    # via
+    #   google-cloud-storage
+    #   google-resumable-media
+google-resumable-media==2.7.2
+    # via google-cloud-storage
+googleapis-common-protos==1.70.0
+    # via google-api-core
 greenlet==3.2.4
     # via sqlalchemy
 h11==0.16.0
-    # via httpcore
+    # via
+    #   httpcore
+    #   uvicorn
 httpcore==1.0.9
     # via httpx
+httplib2==0.31.0
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
 httpx==0.28.1
     # via
     #   langsmith
@@ -65,10 +96,6 @@ idna==3.11
     #   httpx
     #   requests
     #   yarl
-itsdangerous==2.2.0
-    # via flask
-jinja2==3.1.6
-    # via flask
 jiter==0.11.0
     # via openai
 jsonpatch==1.33
@@ -83,7 +110,6 @@ langchain-community==0.3.31
     # via -r requirements.in
 langchain-core==0.3.79
     # via
-    #   -r requirements.in
     #   langchain
     #   langchain-community
     #   langchain-openai
@@ -98,10 +124,7 @@ langsmith==0.4.37
     #   langchain-community
     #   langchain-core
 markupsafe==3.0.3
-    # via
-    #   flask
-    #   jinja2
-    #   werkzeug
+    # via werkzeug
 marshmallow==3.26.1
     # via dataclasses-json
 multidict==6.7.0
@@ -123,12 +146,28 @@ packaging==25.0
     #   langchain-core
     #   langsmith
     #   marshmallow
+passlib==1.7.4
+    # via -r requirements.in
 propcache==0.4.1
     # via
     #   aiohttp
     #   yarl
+proto-plus==1.26.1
+    # via google-api-core
+protobuf==6.33.0
+    # via
+    #   google-api-core
+    #   googleapis-common-protos
+    #   proto-plus
+pyasn1==0.6.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.2
+    # via google-auth
 pydantic==2.12.2
     # via
+    #   fastapi
     #   langchain
     #   langchain-core
     #   langsmith
@@ -138,6 +177,10 @@ pydantic-core==2.41.4
     # via pydantic
 pydantic-settings==2.11.0
     # via langchain-community
+pyparsing==3.2.5
+    # via httplib2
+pypdf2==3.0.1
+    # via -r requirements.in
 python-dotenv==1.1.1
     # via
     #   -r requirements.in
@@ -152,6 +195,8 @@ regex==2025.9.18
 requests==2.32.5
     # via
     #   -r requirements.in
+    #   google-api-core
+    #   google-cloud-storage
     #   langchain
     #   langchain-community
     #   langsmith
@@ -159,33 +204,38 @@ requests==2.32.5
     #   tiktoken
 requests-toolbelt==1.0.0
     # via langsmith
+rsa==4.9.1
+    # via google-auth
 sniffio==1.3.1
     # via
     #   anyio
     #   openai
 sqlalchemy==2.0.44
     # via
+    #   -r requirements.in
     #   langchain
     #   langchain-community
+starlette==0.48.0
+    # via fastapi
 tenacity==9.1.2
     # via
     #   langchain-community
     #   langchain-core
 tiktoken==0.12.0
-    # via
-    #   -r requirements.in
-    #   langchain-openai
+    # via langchain-openai
 tqdm==4.67.1
     # via openai
 typing-extensions==4.15.0
     # via
     #   aiosignal
     #   anyio
+    #   fastapi
     #   langchain-core
     #   openai
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
+    #   starlette
     #   typing-inspect
     #   typing-inspection
 typing-inspect==0.9.0
@@ -194,13 +244,14 @@ typing-inspection==0.4.2
     # via
     #   pydantic
     #   pydantic-settings
+uritemplate==4.2.0
+    # via google-api-python-client
 urllib3==2.5.0
     # via requests
+uvicorn==0.37.0
+    # via -r requirements.in
 werkzeug==3.1.3
-    # via
-    #   -r requirements.in
-    #   flask
-    #   flask-cors
+    # via -r requirements.in
 yarl==1.22.0
     # via aiohttp
 zstandard==0.25.0
