--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,15 @@
 #
 #    pip-compile requirements.in
 #
-
-faiss-cpu==1.7.4
-    # vector store library required by langchain
-twilio==8.14.1
-    #for twilio api
-
 aiohappyeyeballs==2.6.1
     # via aiohttp
 aiohttp==3.13.0
-    # via langchain-community
+    # via
+    #   aiohttp-retry
+    #   langchain-community
+    #   twilio
+aiohttp-retry==2.9.1
+    # via twilio
 aiosignal==1.4.0
     # via aiohttp
 annotated-types==0.7.0
@@ -185,6 +184,8 @@ pydantic-core==2.41.4
     # via pydantic
 pydantic-settings==2.11.0
     # via langchain-community
+pyjwt==2.10.1
+    # via twilio
 pyparsing==3.2.5
     # via httplib2
 pypdf2==3.0.1
@@ -212,6 +213,7 @@ requests==2.32.5
     #   langsmith
     #   requests-toolbelt
     #   tiktoken
+    #   twilio
 requests-toolbelt==1.0.0
     # via langsmith
 rsa==4.9.1
@@ -235,6 +237,8 @@ tiktoken==0.12.0
     # via langchain-openai
 tqdm==4.67.1
     # via openai
+twilio==9.8.4
+    # via -r requirements.in
 typing-extensions==4.15.0
     # via
     #   aiosignal
@@ -245,7 +249,7 @@ typing-extensions==4.15.0
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
-    #   starlette
+    #   starlettef
     #   typing-inspect
     #   typing-inspection
 typing-inspect==0.9.0
