--- a/requirements.in
+++ b/requirements.in
@@ -1,5 +1,18 @@
 fastapi
 langchain
+langchain-community
+langchain-openai
 openai
-uvicorn
+sqlalchemy
 passlib
+werkzeug
+google-api-python-client
+google-cloud-storage
+PyPDF2
+python-dotenv
+requests
+uvicorn
+rapidfuzz
+psycopg2-binary
+twilio
+
